--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "phupq_blog",
   "version": "1.0.0",
   "description": "My first node js project",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js localhost 3000",
+    "start": "nodemon --inspect src/index.js localhost 3000",
+    "watch": "sass --watch src/resources/scss/index.scss src/public/css/index.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "PhuPQ",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "sass": "^1.62.0",
+    "script": "^0.1.4"
   }
 }
