--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "bootstrap": "^5.3.0-alpha3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.10.0",
+    "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   },
